--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         }
     </script>
 
-    <script src="/monaco-editor-loader.js" type="text/javascript"></script>
+    <script src="./monaco-editor-loader.js" type="text/javascript"></script>
     <script type="module">
-        require.config({ paths: { vs: '/monaco-editor-vs' } });
-        import initEditor from 'monaco-mermaid.js';
+        require.config({ paths: { vs: './monaco-editor-vs' } });
+        import initEditor from './monaco-mermaid.js';
 
         var counter = 0
 
